This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Leak in PyUnicode_AsWideCharString()
Type: resource usage Stage: resolved
Components: Interpreter Core Versions: Python 3.3
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: loewis, python-dev, skrah, vstinner
Priority: normal Keywords: patch

Created on 2012-08-19 17:49 by skrah, last changed 2022-04-11 14:57 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
aswidechar-leak.diff skrah, 2012-08-19 17:49 review
Messages (4)
msg168584 - (view) Author: Stefan Krah (skrah) * (Python committer) Date: 2012-08-19 17:49
Coverity found a leak in PyUnicode_AsWideCharString(). Patch attached.
msg168591 - (view) Author: Martin v. Löwis (loewis) * (Python committer) Date: 2012-08-19 19:28
LGTM.
msg168593 - (view) Author: Stefan Krah (skrah) * (Python committer) Date: 2012-08-19 19:57
Thanks!
msg168594 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2012-08-19 19:58
New changeset 2703171ddf53 by Stefan Krah in branch 'default':
Issue #15728: Fix leak in PyUnicode_AsWideCharString(). Found by Coverity.
http://hg.python.org/cpython/rev/2703171ddf53
History
Date User Action Args
2022-04-11 14:57:34adminsetgithub: 59933
2012-08-19 19:59:45skrahsetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2012-08-19 19:58:33python-devsetnosy: + python-dev
messages: + msg168594
2012-08-19 19:57:37skrahsetmessages: + msg168593
2012-08-19 19:28:01loewissetnosy: + loewis
messages: + msg168591
2012-08-19 17:49:44skrahcreate