Issue #15728: Fix leak in PyUnicode_AsWideCharString(). Found by Coverity.